Fix wrapping on latest post in subcategory view

--- a/punkweb_bb/static/punkweb_bb/css/subcategory.css
+++ b/punkweb_bb/static/punkweb_bb/css/subcategory.css
@@ -30,6 +30,7 @@
 .thread__latestPost {
   align-items: center;
   display: flex;
+  justify-content: end;
   gap: 0.75rem;
 }
 
